--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
       <a href="#">Personal Website</a>
       <a href="#">Personal Siteplan</a>
     </nav> 
+    <p>Tyler McMurtrey - WDD130</p>
 </body>
 </html>
