added paragraphs and images to site

--- a/portfolio/site-plan.html
+++ b/portfolio/site-plan.html
@@ -61,10 +61,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: Playfair Display  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Amiri  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
@@ -87,8 +87,12 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Landscape</a>
+        <a href="#">Wildlife</a>
+        <!--<a href="#">Portraits</a>
+        <a href="#">Contact me</a>-->
+
+
       </nav>
       <hr>
       <h2>
@@ -99,10 +103,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Landscape <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Wildlife  <!-- change this -->
         </div>
 
         <div class="top">
@@ -124,29 +128,39 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Welcome to my photography page! I picked up my first camera more than 15 years ago when my mother got a Canon for Christmas. From that point forward, it was something that I wanted to get into, something I wanted to be good at.  In 2018, I bought my first camera and spent the next several years traveling around the country and the world, taking thousands of photos, with the hopes that I could one day share them, and have them inspire others, like that camera inspired me. On this website, I have showcased some of what I feel are the best photos that I have taken over the past four and a half years. I know you will enjoy and appreciate them as much as I do!
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/aurora.jpg" alt="image for homepage">
+        <img src="images/rosette.jpg" alt="image for homepage">
 
       </ul>
       <h3>[Page 2]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        On this page of my portfolio I have showcased some of my favorite landscape photos from some of the most beautiful places on earth. Such as the Rocky Mountains of Western Colorado, the Andes of Peru, and the Bisti Wilderness of New Mexico. In my travels to all of these amazing places, I have discovered a common theme, that beauty can be found everywhere you go, sometimes in the unlikeliest of places.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/Dallasridge2.jpg" alt="image for page">
+        <img src="images/Dallasridge4.jpg" alt="image for page">
+        <img src="images/Mirador Racchi.jpg" alt="image for page">
+        <img src="images/machu picchu 2.jpg" alt="image for page">
+        <img src="images/circles.jpg" alt="image for page">
+        <img src="images/bisti.jpg" alt="image for page">
+        <img src="images/mway.jpg" alt="image for page">
+        <img src="images/waterfall.jpg" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        On this page of my portfolio, I have showcased some of my favorite wildlife photos from some of the travels and excursions I have been on. Last year my father, uncle, and I flew up Alaska to photograph the local bear population. We had the amazing opportunity to see and photograph these bears from incredibly close, sometimes within just a few feet. Being able to get this close to these magnificent animals allowed me to capture both images and experiences that I will never forget, and my hope is that you might experience a bit through these photographs.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/cub.jpg" alt="image for page3">
+        <img src="images/bear1.jpg" alt="image for page3">
+        <img src="images/bear3.jpg" alt="image for page3">
+        <img src="images/bear2.jpg" alt="image for page3">
+        <img src="images/eagle.jpg" alt="image for page3">
+    
 
       </ul>
       <hr>
