--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tyler McMurtrey | Portfolio | Home</title>
-    <link rel="stylesheet" href="styles/styles.css"> 
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
     <div id="content">
         <header>
@@ -14,31 +16,35 @@
                 <img class="logo" src="images/logoblack.png" alt="Photography Logo">
             </a>
             <nav>
-                <a href="site-plan.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
+                <a href="wildlife.html">Wildlife</a>
+                <a href="landscape.html">Landscape</a>
             </nav>
         </header>
-        <main class = "home-grid">
-            <div id="homepage">
+        <main class="home-grid">
                 <div id="home-image">
                     <img id=home-img" src="images/aurora-home.jpg" alt="Alaska Aurora">
                 </div>
-                <nav>
+
                 <section id="welcome">
                     <h1 class="welcome-msg">WELCOME TO</h1>
-                    <h2 class="welcome-msg-text">TYLER MCMURTREY PHOTOGRAPHY</h2>
-                    </div>
-                </section>
-            </div>
-        </main>
-        <footer>
-            <div class="social">
-                <a href="https://www.facebook.com/tylermcphoto" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
+                    <h2 class="welcome-msg-text">TYLER MCMURTREY <BR> PHOTOGRAPHY</h2>
+
+
+            </section>
+            <section id="paragraph">
+                
+                <p class="paragraph-text">Welcome to my photography page! I picked up my first camera more than 15 years ago when my mother got a Canon for Christmas. From that point forward, it was something that I wanted to get into, something I wanted to be good at.  In 2018, I bought my first camera and spent the next several years traveling around the country and the world, taking thousands of photos, with the hopes that I could one day share them, and have them inspire others, like that camera inspired me. On this website, I have showcased some of what I feel are the best photos that I have taken over the past four and a half years. I know you will enjoy and appreciate them as much as I do!</p>
+            </section>                  
+    </div>
+    </main>
+    <footer>
+        <div class="social">
+            <a href="https://www.facebook.com/tylermcphoto" target="_blank">
+                <img src="images/facebook.png" alt="fb icon">
                 <a href="https://instagram.com/skullyastro" target="_blank">
                     <img src="images/instagram.png" alt="instagram icon">
                 </a>
-            </div>
-        </footer>
+        </div>
+    </footer>
     </div>
 </body>
