--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
@@ -20,16 +21,16 @@
                 <a href="landscape.html">Landscape</a>
             </nav>
         </header>
+        <style>
+            body{
+                background-image: url(images/aurora-home.jpg);
+                max-width: 1600px;
+            }
+            </style>
         <main class="home-grid">
                 <div id="home-image">
-                    <img id=home-img" src="images/aurora-home.jpg" alt="Alaska Aurora">
+                    <img id="home-img" src="images/aurora-home.jg" alt="Alaska Aurora">
                 </div>
-
-                <section id="welcome">
-                    <h1 class="welcome-msg">WELCOME TO</h1>
-                    <h2 class="welcome-msg-text">TYLER MCMURTREY <BR> PHOTOGRAPHY</h2>
-
-
             </section>
             <section id="paragraph">
                 
