--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,15 +23,13 @@
         </header>
         <style>
             body{
+                width: auto;
                 background-image: url(images/aurora-home.jpg);
-                max-width: 1600px;
+                background-repeat: no-repeat;
+                background-size: cover;
             }
             </style>
         <main class="home-grid">
-                <div id="home-image">
-                    <img id="home-img" src="images/aurora-home.jg" alt="Alaska Aurora">
-                </div>
-            </section>
             <section id="paragraph">
                 
                 <p class="paragraph-text">Welcome to my photography page! I picked up my first camera more than 15 years ago when my mother got a Canon for Christmas. From that point forward, it was something that I wanted to get into, something I wanted to be good at.  In 2018, I bought my first camera and spent the next several years traveling around the country and the world, taking thousands of photos, with the hopes that I could one day share them, and have them inspire others, like that camera inspired me. On this website, I have showcased some of what I feel are the best photos that I have taken over the past four and a half years. I know you will enjoy and appreciate them as much as I do!</p>
