updated personal site

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,7 +37,9 @@
     </div>
     </main>
     <footer>
-        <div class="social">
+        <p><a href="site-plan.html">Site Plan</a></p>
+
+        <div class="socials">
             <a href="https://www.facebook.com/tylermcphoto" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
                 <a href="https://instagram.com/skullyastro" target="_blank">
