--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
       <a href="positioning.html">Positioning Activity</a>
       <a href="portfolio/index.html">Personal Website</a>
-      <a href="#">Personal Siteplan</a>
+      <a href="portfolio/site-plan.html">Personal Siteplan</a>
     </nav> 
     <p>Tyler McMurtrey - WDD130</p>
 </body>
