--- a/portfolio/landscape.html
+++ b/portfolio/landscape.html
@@ -67,7 +67,8 @@
         <footer>
             <p>Tyler McMurtrey Photography</p>
             <p><a href="index.html">Home</a></p>
-            <p><a href="Landscape.html">Landscape</a></p>
+            <p><a href="wildlife.html">Landscape</a></p>
+            <p><a href="site-plan.html">Site Plan</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
@@ -75,6 +76,7 @@
                 <a href="https://instagram.com" target="_blank">
                     <img src="images/instagram.png" alt="instagram icon">
                 </a>
+            
             </div>
         </footer>
     </div>
