--- a/portfolio/wildlife.html
+++ b/portfolio/wildlife.html
@@ -68,6 +68,8 @@
             <p>Tyler McMurtrey Photography</p>
             <p><a href="index.html">Home</a></p>
             <p><a href="Landscape.html">Landscape</a></p>
+            <p><a href="site-plan.html">Site Plan</a></p>
+
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
